--- a/client/src/App.css
+++ b/client/src/App.css
@@ -135,6 +135,7 @@ img {
   padding: 0.4rem 1.3rem;
   font-size: 1rem;
   border: none;
+  border-radius: 5px;
   cursor: pointer;
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
@@ -457,6 +458,7 @@ button {
 }
 
 /* Posts Page */
+
 .post-form .post-form-header {
   background: var(--primary-color);
   padding: 0.5rem;
