just some comment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@300;500;700;800&display=swap');
-
+/* Adding a comment */
 /* Global Styles */
 :root {
   --primary-color: #006aa5;
